# MultiDirectory

./: .darglint2  .flake8  .gitignore  .gitmodules  LICENSE  Makefile  README.md  check_migrations.py  docker-compose.2nd.yml  docker-compose.dev.yml  docker-compose.remote.test.yml  docker-compose.test.yml  docker-compose.yml  kea-dhcp4.conf  local.env  local2.env  pdns.conf  pyproject.toml  recursor.conf  syslog-ng.conf  test_migration_fix.py  traefik.yml  задание
.dhcp/: kea-ctrl-agent.conf  kea-dhcp4.conf
.dns/: dns-entrypoint.sh  dns_api.py  entrypoint.sh
.dns/templates/: acl.template  zone.template  zone_options.template
.docker/: Dockerfile  bind9.Dockerfile  bind_dns.Dockerfile  dev.Dockerfile  kea.Dockerfile  krb.Dockerfile  lint.Dockerfile  mfa.Dockerfile  pdns_auth.Dockerfile  test.Dockerfile
.docker/entrypoints/: kea_entrypoint.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-beta.yml  build-docker-image.yml  build-linters.yml  checks.yml  codeql.yml  lint.yml  pull_request.yml
.kerberos/: Dockerfile  config_server.py  entrypoint.sh  kadm5.acl  kdc.conf  krb5.conf  supervisord.conf
.mfa/: mfa_proxy_server.py
.package/: docker-compose.yml  setup.bat  setup.sh  setup_keepalived.sh  swarm.7z  traefik.yml
.package/swarm/: README-swarm.md  clean-swarm.sh  docker-compose-swarm.yml  setup-swarm.sh  traefik.yaml
.package/swarm/certs/: acme.json  cert-md.pem  cert.pem  openssl.cnf  privkey-md.pem  privkey.pem
app/: Dockerfile  __init__.py  __main__.py  abstract_dao.py  abstract_service.py  alembic.ini  api.py  audit_models.py  authorization_provider_protocol.py  client.py  config.py  constants.py  dev.Dockerfile  entities.py  enums.py  event_handler.py  ioc.py  ldap_error_codes_mapping.py  lint.Dockerfile  local.Dockerfile  models.py  multidirectory.py  password_utils.py  redis_client.py  schedule.py  security.py  test.Dockerfile  truff.py  web_app.py
app/alebic/: env.py
app/alebic/versions/: 93d18fa59534_init.py
app/alembic/: env.py  script.py.mako
app/alembic/versions/: 002bf88959c5_add_uuid.py  01f3f05a5b11_add_primary_group_id.py  039ea517a20b_add_user_lockout_tracking_fields.py  05ddc0bd562a_add_roles.py  08a99c1fa64d_modify_ldap_schema.py  0bf9ba472037_.py  0c7bd30b5a24_.py  109d13eb0e35_.py  16a9fa2c1f1e_rename_readonly_group.py  196f0d327c6a_.py  22862a53af20_.py  275222846605_initial_ldap_schema.py  2aa649ab4be0_.py  2c6556187ae3_path_in_directory.py  35d1542d2505_add_entity_id.py  3ad59ec7749f_add_audit_policies.py  3d6ed668f1dd_.py  4334e2e871a4_add_sessions_ttl.py  4442d1d982a4_remove_krb_policy.py  4461a62bc9d5_user_api_roles.py  46d52ecaed08_extend_password_policy.py  4798b12b97aa_dedicated_servers.py  48ffb72079f7_directory_ref.py  4e8772277cfe_add_web_permissions.py  50b2889acfb1_.py  51a357097d16_add_object_class_names_index.py  52803ca42e35_.py  56082d7ac0d4_remove_old_templates.py  563b850ca7e1_refactor_groups.py  59e98bbd8ad8_.py  59e98bbd8ad8_change_gidnumber_for_users.py  5c519e0f989c_.py  5cf15f0c2696_.py  5d413a7fa211_extend_password_policy_enterprise.py  6303f5c706ec_update_krbadmin_useraccountcontrol_.py  6355e97cd073_add_objectsid_attr.py  686c7454c4eb_.py  692ae64e0cc5_.py  6c858cc05da7_add_default_admin_name.py  6f8fe2548893_fix_read_only.py  (+49 more)
app/alembic/versions_audit/: f93261de37ad_initial_audit.py
app/alembic/versions_main/: 196f0d327c6a_.py  4334e2e871a4_add_sessions_ttl.py  (+4 more)
app/api/: __init__.py  audit_decorator.py  audit_dependency.py  base_adapter.py  error_routing.py  exception_handlers.py  middlewares.py  utils.py
app/errors/: __init__.py  base.py  catalog.py  contracts.py  enums.py  http_mapper.py  types.py
app/extra/: .search.q.sql  __init__.py  adClasses.txt  adTypes.txt  alembic_utils.py  client.py  common_passwords.txt  common_passwords_data.py  dev_data.py  dump_acme_certs.py  generate_cert.sh  kdc.conf  krb5.conf  mfa.py  password_ban_words_data.py  permissions.sh  pre_run_setup.sh  run_md.py  setup_dev.py  zone.template
app/ldap/: asn1parser.py  codes.py  dialogue.py  filter_interpreter.py  ldap_requests.py  ldap_responses.py  messages.py  models.py  objects.py  utils.py
app/ldap_protocol/: __init__.py  access_policy.py  asn1parser.py  common_password_dao.py  data_logger.py  dependency.py  dialogue.py  dns.py  exceptions.py  filter_interpreter.py  kerberos.py  ldap_codes.py  ldap_requests.py  ldap_responses.py  messages.py  multifactor.py  netlogon.py  network_policy.py  objects.py  password_ban_word_dao.py  password_policy.py  permissions_checker.py  server.py  session_storage.py  shadow_manager.py  udp.py  udp_server.py  user_account_control.py  utils.py
app/models/: __init__.py  database.py  ldap3.py
app/password_manager/: __init__.py  checks.py  error_messages.py  password_utils.py  password_validator.py  settings.py  utils.py  validator.py
app/password_validator/: __init__.py  checks.py  validator.py
integration_tests/gssapi/: docker-compose.yaml  run.sh
integration_tests/kerberos/: Dockerfile
integration_tests/ssh/: Dockerfile  docker-compose.ssh_integration.yml  docker-compose.yml  entrypoint.sh  init.sh  run.sh
multi-directory/: pyproject.toml
ssh/: init.sh  sshd_config
syslog/apt/: eipp.log.xz
tests/: api_datasets.py  conftest.py  constants.py  search_request_datasets.py  test_bind.py  test_password_validation.py  test_password_validator.py  test_pool_client_handler.py  test_shedule.py
tests/test_errors/: __init__.py  parser.py  test_error_code_uniqueness.py  test_error_handling.py  test_exceptions.py  test_mapping.py  test_translator.py
tests/test_global_ldap/: test_bind.py  test_search.py
tests/test_ldap/: test_attribute_value_validator.py  test_bind.py  test_ldap3_definition_parse.py  test_ldap3_lib.py  test_ldap3_whoami.py  test_netlogon.py  test_passwd_change.py  test_pool_client_handler.py  test_search.py
tests/test_views/: test_add.py  test_api_auth.py  test_auth.py  test_delete.py  test_mfa.py  test_modify.py  test_modify_dn.py  test_passwd_change.py  test_policies.py  test_search.py
(+420 files in other folders)
