[tool.poetry]
name = "MultiDirectory"
version = "2.1.1"
description = ""
authors = ["Mastermind-U <rex49513@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "3.12.6"
alembic = "^1.14.1"
asn1 = "^2.7.1"
asyncstdlib = "^3.10.6"
bcrypt = "4.0.1"
dishka = "^1.4.2"
dnspython = "^2.7.0"
fastapi = "^0.115.0"
httpx = "^0.27.2"
jinja2 = "^3.1.4"
ldap-filter = "^1.0.1"
loguru = "^0.7.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg = {extras = ["binary", "pool"], version = "^3.2.3"}
pydantic = "^2.9.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.17"
pytz = "^2025.1"
redis = "^5.2.1"
sqlalchemy = {extras = ["asyncio", "mypy"], version = "^2.0.35"}
uvicorn = "^0.32.0"
uvloop = "^0.21.0"
websockets = "^14.0"
gssapi = "^1.9.0"
backoff = "^2.2.1"

[tool.poetry.group.linters.dependencies]
flake8 = "7.1.1"
flake8-awesome = "^1.3.0"
flake8-commas = "^4.0.0"
flake8-docstrings = "^1.6.0"
flake8-isort = "^6.1.1"
flake8-pytest = "^1.4"
isort = "^5.13.2"
mypy = "^1.13.0"
ruff = "0.9.5"
types-pytz = "^2022.7.1.0"

[tool.poetry.group.test.dependencies]
coverage = "7.6.4"
gevent = "^24.10.3"
ldap3 = "^2.9.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
py-hot-reload = "^1.0.6"
watchdog = "4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
ignore_missing_imports = true
platform = "linux"
disallow_untyped_defs = true
exclude = ["app/alembic", "alembic"]
show_column_numbers = true
pretty = true
warn_unreachable = true
color_output = true
warn_unused_ignores = true

[tool.pytest.ini_options]
pythonpath = ["app"]
addopts = [
    "--cov",
    "--cov-report=term-missing:skip-covered"
]
asyncio_mode = "auto"

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
concurrency = ["thread", "gevent"]


# RUFF
# Ruff is a linter, not a type checker.
#
# commands:
# ruff check . --preview
# ruff check . --fix --unsafe-fixes
# ruff format .

[tool.ruff]
target-version = "py312"
line-length = 79
output-format = "grouped"
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79
line-ending = "lf"
skip-magic-trailing-comma = false  # default: false

[tool.ruff.lint]
# Flake8 S101, I900, G004, IF100, S311, D301, E231
# Для alembic предлагаю оставить включенным, только некоторые правила можно вырубить.
# S101 - done. Использование assert в коде. Вырубил только в тестах
# I900 - done. Это аналог RUF100. Проверка использования комментариев # noqa
# G004 - done. Аналог S102. Предлагаю врубить. Проверка использования небезопасных методов и функций (например, eval, exec)
# IF100 - done. Это аналог SIM101. Предлагаю врубить. Проверка использования if условий, которые могут быть упрощены
# S311 - done. Это аналог S311. Вырубил.
# D301 - done. Вырублены все D-rules. Мб включим когда-нибудь, а пока добавлю и закомментирую.
# E231 - done. Это не надо вырубать.

# Ruff contains flake8-awesome.
# flake8-annotations -> ANN (Ruff)
# flake8-bandit -> S (Ruff)
# flake8-bugbear -> B (Ruff)
# flake8-commas -> COM (Ruff)
# flake8-docstrings -> D (Ruff)
# flake8-isort -> I (Ruff)
# flake8-pytest -> PT (Ruff)
# flake8-quotes -> Q (Ruff)
# flake8-simplify -> SIM (Ruff)
# flake8-type-checking -> TC (Ruff)
select = [
    "F",  # Pyflakes. Must have
    "E",  # pycodestyle (Error), check tool.ruff.lint.pycodestyle. Must have
    "W",  # pycodestyle (Warnings), check tool.ruff.lint.pycodestyle
    "C90",  # mccabe (max_complexity), check tool.ruff.lint.mccabe
    "I",  # isort, check tool.ruff.lint.isort. Must have
    "N",  # pep8-naming
    "A",  # flake8 builtin-attribute-shadowing
    "D",  # pydocstyle, check tool.ruff.lint.pydocstyle TODO uncomment, ruff fix and fix error
    "UP",  # pyupgrade, check tool.ruff.lint.pyupgrade. Must have
    "ANN",  # flake8-annotations, check tool.ruff.lint.flake8-annotations
    # "ASYNC",  # flake8-async TODO uncomment, ruff fix and fix error
    "S",  # flake8-bandit
    "B",  # flake8-bugbear. Must have
    "COM",  # flake8-commas
    # "CPY",  # flake8-copyright TODO uncomment, ruff fix and fix error
    # "PIE",  # flake8-pie TODO uncomment, ruff fix and fix error
    # "PYI",  # flake8-pyi TODO uncomment, ruff fix and fix error
    "PT",  # flake8-pytest
    "Q",  # flake8-quotes TODO uncomment, ruff fix and fix error
    # "RET",  # flake8-return TODO uncomment, ruff fix and fix error
    # "SLF",  # flake8-self TODO uncomment, ruff fix and fix error
    "SIM",  # flake8-simplify. Must have TODO uncomment, ruff fix and fix error
    "TC",  # flake8-type-checking, check flake8-type-checking TODO does we need it? uncomment, ruff fix and fix error
    # "ARG",  # flake8-unused-arguments TODO uncomment, ruff fix and fix error
    # "TD",  # flake8-todos TODO uncomment, ruff fix and fix error
    # "ERA",  # eradicate TODO uncomment, ruff fix and fix error
    # "PGH",  # pygrep-hooks TODO does we need it? uncomment, ruff fix and fix error
    # "PL",  # Pylint TODO uncomment, ruff fix and fix error
    # "DOC",  # pydoclint TODO uncomment, ruff fix and fix error
    # "RUF",  # Ruff-specific rules TODO uncomment, ruff fix and fix error
    "RUF100", # TODO delete that and uncomment "RUF"-rule in line up.
]

# Gradually remove all values marked 'TODO' and fix errors.
ignore = [
    "D101",  # TODO delete that and fix all errors
    "D102",  # TODO delete that and fix all errors
    "D103",  # TODO delete that and fix all errors
    "D104",  # TODO delete that and fix all errors
    "D105",  # TODO delete that and fix all errors
    "D106",  # TODO delete that and fix all errors
    "D107",  # TODO delete that and fix all errors
    "D203",  # this is necessary. Conflict with `D211`
    "D205",  # TODO delete that and fix all errors
    "D213",  # this is necessary. Conflict with `D212`
    "UP007",  # TODO delete that and fix all errors
    "UP015",  # TODO delete that and fix all errors
    "UP017",  # TODO delete that and fix all errors
    "UP032",  # TODO delete that and fix all errors
    "UP034",  # TODO delete that and fix all errors
    "UP035",  # this is necessary. We allowed deprecated import
    "UP037",  # TODO delete that and fix all errors
    "UP040",  # TODO delete that and fix all errors
    "ANN001",  # TODO delete that and fix all errors
    "ANN002",  # this is necessary.
    "ANN003",  # this is necessary.
    "ANN401",  # TODO delete that and fix all errors
    "S311",  # this is necessary.
    "B904",  # this is necessary.
    "COM812",  # this is necessary. Cause conflicts when used with the formatter
    "TC001",  # this is necessary.
    "TC002",  # this is necessary.
    "TC003",  # this is necessary.
    "SIM101",  # Аналог simplify-boolean-expressions IF100
]
extend-select = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"] # Ignore `Flake8-bandit S101` rule for the `tests/` directory.

[tool.ruff.lint.mccabe]
# 23 Complexity level is too high, need to reduce this level
# or ignore it `# noqa: C901`.
max-complexity = 23

[tool.ruff.lint.isort]
known-first-party = [
    "ldap_protocol",
    "client",
    "config",
    "models",
    "api",
    "security",
    "tests",
    "web_app",
    "ioc",
    "schedule",
    "extra",
]
split-on-trailing-comma = false
combine-as-imports = true

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true
